Hotfix for spacing issues on grid tablet size

--- a/style.css
+++ b/style.css
@@ -694,9 +694,8 @@ footer #bottom #location #locale {
     
     
     .mix{
-        margin: 5px;
         width: 31%;
-        padding-bottom: 30%;
+        padding-bottom: 31%;
     }
 }
 
